<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">GrowKart</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="cart_fragment">Cart Fragment</string>
    <string name="no_product_in_cart_title">Cart is empty</string>
    <string name="no_product_in_cart_message">Your cart seems to be Empty. Take a look at our store!</string>
    <string name="store">store</string>
    <string name="delete">Delete</string>
    <string name="orderItems">orderItems</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_your_phone_number_hint">Enter your phone number</string>
    <string name="submit">Submit</string>
    <string name="guest_login_text">I\'ll do it later</string>
    <string name="otp_hint">Enter the OTP</string>
    <string name="verify">Verify</string>
    <string name="phone_number_regex" tools:ignore="TypographyDashes">^[6-9]{1}[0-9]{9}$/</string>
    <string name="try_again_error">Somethign went wrong. Please try Again!</string>
    <string name="sign_out">Sign Out</string>
    <string name="no_orders_found">No orders found!</string>
    <string name="no_order_message">Its time to try our store and place your first order!!</string>
    <string name="no_order_guest_user_message">You are not logged in yet. Please login to get your order details here!</string>
    <string name="order_date">Order Date</string>
    <string name="order_details">Order Details</string>
    <string name="invalid_phone_no">Phone Number is invalid</string>
    <string name="order_placed">Order Placed</string>
    <string name="label_n0_of_products">Total number of Products :</string>
    <string name="grand_total">Grand Total :</string>
    <string name="login">Login</string>
    <string name="dob">Date of Birth</string>
    <string name="update_order">Update Order</string>
    <!--Gender -->
    <string-array name="gender_array">
        <item>Not Specified</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>