<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.LoginFragment">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_big"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/padding_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/splash_logo"
                android:layout_width="@dimen/dimen_150"
                android:layout_height="@dimen/dimen_150"
                android:scaleType="fitCenter"
                android:src="@drawable/logo_removebg_preview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!--        <com.google.android.material.textfield.TextInputLayout-->
            <!--            android:layout_width="match_parent"-->
            <!--            android:layout_height="wrap_content">-->
            <!--            <com.google.android.material.textfield.TextInputEditText-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:textColorLink="@color/colorAccent"-->
            <!--                android:textColorHighlight="@color/colorAccent"/>-->
            <!--        </com.google.android.material.textfield.TextInputLayout>-->
            <!--            <TextView-->
            <!--                style="@style/LatoBoldWhite"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:padding="@dimen/padding_small"-->
            <!--                android:text="@string/enter_otp"-->
            <!--                android:textColor="@android:color/darker_gray"-->
            <!--                android:textSize="@dimen/font_20" />-->

            <EditText
                android:id="@+id/et_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangular_border"
                android:hint="@string/enter_your_phone_number_hint"
                android:inputType="phone"
                android:padding="@dimen/padding_medium" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_medium"
                    android:background="@drawable/bg_ripple_button"
                    android:text="@string/submit"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/font_18"
                    android:textStyle="bold" />

                <ProgressBar
                    android:id="@+id/pg_bar"
                    style="?android:attr/indeterminateProgressStyle"
                    android:layout_width="@dimen/dimen_24"
                    android:layout_height="@dimen/dimen_24"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="@dimen/margin_big"
                    android:elevation="7dp"
                    android:indeterminate="true"
                    android:indeterminateBehavior="cycle"
                    android:indeterminateTint="@android:color/white"
                    android:visibility="gone" />

            </FrameLayout>


            <TextView
                android:id="@+id/btn_guest_login"
                style="@style/LatoBoldBlackSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/guest_login_text"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/font_18"
                android:textStyle="bold" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>